prover-ray/zkcdriver/testdata/synced/invalid/memory_14.zkc
//error:3:1-39:duplicate declaration
input buffer(addr:u16) -> (bytes:u8)
memory buffer(addr:u32) -> (words:u16)
